# drf_resouce

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
drf_resource/: apps.py  base.py  tasks.py
drf_resource/management/: finder.py
scripts/sensitive_info_check/: check_ip.py
